@@ -1,3 +1,7 @@
+drkns 13.10.2016 09:33:05 +0200 - build 4822
+
+1. Уточнение 4603. Передаём перечисленное в кастомную сортировку только если оно уже считано или будет.
+
 drkns 12.10.2016 23:24:37 +0200 - build 4821
 
 1. 0003304: Вывод на консоль из плагина удваивается за пределами окна
